--- a/app/templates/configure/attrib.html
+++ b/app/templates/configure/attrib.html
@@ -2,6 +2,8 @@
 
 {% block upper_left %}
     <div class="nav-container">
+        <a class="upper-left" href="{{ url_for('overview') }}">Overview</a>
+        <span class="separator">|</span>
         <a href="{{ url_for('configure_index') }}">Main Setup Page</a>
     </div>
 {% endblock %}
@@ -16,7 +18,7 @@
         <label for="attrib-name">Name:</label>
         <input type="text" id="attrib-name" name="attrib_name" value="{{ current.name }}" required><br>
         <label for="attrib-description" >Description:</label>
-        <textarea id="attrib-description" name="attrib_description" rows="8" cols="50">{{ current.description }}</textarea><br>
+        <textarea id="attrib-description" name="attrib_description" rows="10" cols="50">{{ current.description }}</textarea><br>
 
         <div class="footer-buttons">
             <button type="submit" id="btn-save" name="save_changes">Save and Close</button>
