--- a/app/templates/configure/location.html
+++ b/app/templates/configure/location.html
@@ -2,6 +2,8 @@
 
 {% block upper_left %}
     <div class="nav-container">
+        <a class="upper-left" href="{{ url_for('overview') }}">Overview</a>
+        <span class="separator">|</span>
         <a href="{{ url_for('configure_index') }}">Main Setup Page</a>
     </div>
 {% endblock %}
@@ -22,10 +24,10 @@
         <input type="text" id="dimensions" name="dimensions" value="{{ current.grid.dimensions[0] }}x{{ current.grid.dimensions[1] }}" size="5"> <span class="label-like">width x height</span><br>
         <label for="excluded-left-top">Exclude from Grid:</label>
         <input type="text" id="excluded-left-top" name="excluded_left_top" 
-               value="{{ current.grid.excluded[0] }},{{ current.grid.excluded[1] }}" size="5">
+               value="{{ current.grid.excluded[:2] }}" size="5">
         <label for="excluded-right-bottom"> to </label>
         <input type="text" id="excluded-right-bottom" name="excluded_right_bottom" 
-               value="{{ current.grid.excluded[2] }},{{ current.grid.excluded[3] }}" size="5">
+               value="{{ current.grid.excluded[2:] }}" size="5">
         <span class="label-like">left,top to right,bottom</span><br>
         <div id="destinations-container" class="outer-border">
             <div>
@@ -40,7 +42,7 @@
                     <script>
                         $(document).ready(function() {
                             // Enable or disable the distance fields based on the selected destination
-                            $('#destination-select').change(function() {
+                            $('#dest-select').change(function() {
                                 var selectedOption = $(this).find(':selected');
                                 var isDestinationSelected = (selectedOption.val() !== '');
                                 $('.distance-field').prop('disabled', !isDestinationSelected);
@@ -48,7 +50,7 @@
                         });
                     </script>
                     <div class="select-box">
-                        <select id="destination-select">
+                        <select id="dest-select">
                             <option value="" selected>(Select location)</option>
                             {% for location in game_data.locations %}
                                 {% if location.id != current.id %}
@@ -56,7 +58,7 @@
                                 {% endif %}
                             {% endfor %}
                         </select>
-                        <button type="button" id="add-destination-btn" class="lesser-button">Add Destination</button>
+                        <button type="button" id="add-dest-btn" class="lesser-button">Add Destination</button>
                     </div>
                 {% else %}
                     <p class="no-entities">(No other locations)</p>
@@ -81,7 +83,7 @@
                 {% if game_data.items %}
                     <!-- Select box for adding another source -->
                     <div class="select-box">
-                        <select class="item-select" name="item_select">
+                        <select class="item-select">
                             <option value="" selected>(Select item)</option>
                             {% for item in game_data.items %}
                                 {% if item.id not in current.items %}
@@ -112,50 +114,61 @@
                 $('#btn-delete').attr('disabled', 'disabled');
             {% endif %}
 
-            function addDestination(destinationId, destinationName, distance = 1) {
-                const destinationHtml = `
-                    <div class="destination">
-                        <input type="hidden" name="destination_id[]" value="${destinationId}">
-                        <p>${destinationName}
-                        <label for="destination-distance">Distance:</label>
-                        <input type="text" id="destination-distance" name="destination_distance[]" value="${distance}" class="distance-field" size="5">
-                        <button type="button" class="remove-destination-btn lesser-button">Remove Destination</button>
-                        </p>
-                    </div>
+            function addDestination(destId, destName, distance = 1, exitPos = "0,0", entrancePos = "0,0") {
+                const destHtml = `
+                    <table class="destination"><tr>
+                        <td class="align-top" style="padding: 5px;">
+                            <input type="hidden" name="dest_id[]" value="${destId}">
+                            ${destName}
+                        </td><td class="align-top">
+                            <label for="dest-distance-${destId}">Distance:</label>
+                            <input type="text" id="dest-distance-${destId}" name="dest_distance[]" value="${distance}" class="distance-field" size="5">
+                        </td><td class="align-top">
+                            <label for="exit-pos-${destId}">Exit (Here):</label>
+                            <input type="text" id="exit-pos-${destId}" name="dest_exit[]" value="${exitPos}" size="8"><br>
+                            <label for="entrance-pos-${destId}">Entrance (There):</label>
+                            <input type="text" id="entrance-pos-${destId}" name="dest_entrance[]" value="${entrancePos}" size="8">
+                        </td><td class="align-top">
+                            <button type="button" class="remove-dest-btn lesser-button">Remove Destination</button>
+                        </td>
+                    </tr></table>
                 `;
-                $('#destinations-container').prepend(destinationHtml);
+                $('#destinations-container').prepend(destHtml);
             }
-            $('#add-destination-btn').click(function() {
-                const selectedOption = $('#destination-select option:selected');
-                const destinationId = selectedOption.val();
-                const destinationName = selectedOption.text();
-                if (destinationId == "") {
+            $('#add-dest-btn').click(function() {
+                const selectedOption = $('#dest-select option:selected');
+                const destId = selectedOption.val();
+                const destName = selectedOption.text();
+                if (destId == "") {
                     return; // don't add if the selected option is the placeholder
                 }
-                let destinationExists = false;
+                let destExists = false;
                 $('.destination').each(function() {
-                    const existingId = $(this).find('input[name="destination_id[]"]').val();
-                    if (existingId === destinationId) {
-                        destinationExists = true;
+                    const existingId = $(this).find('input[name="dest_id[]"]').val();
+                    if (existingId === destId) {
+                        destExists = true;
                         return false; // exit the each loop
                     }
                 });
-                if (destinationExists) {
+                if (destExists) {
                     alert('Destination already exists.');
                     return;
                 }
-                addDestination(destinationId, destinationName);
+                addDestination(destId, destName);
             });
             {% for dest in current.destinations.values() %}
                 addDestination(
                     {{ dest.loc.id }},
                     "{{ dest.loc.name }}",
-                    "{{ dest.distance | formatNum }}");
+                    "{{ dest.distance | formatNum }}",
+                    "{{ dest.exit }}",
+                    "{{ dest.entrance }}",
+                    );
             {% endfor %}
 
-            $('#destinations-container').on('click', '.remove-destination-btn', function() {
-                var destinationContainer = $(this).closest('.destination');
-                destinationContainer.remove();
+            $('#destinations-container').on('click', '.remove-dest-btn', function() {
+                const destContainer = $(this).closest('.destination');
+                destContainer.remove();
             });
 
             function addItem(itemId, itemName, itemQty = 1, itemPos = "0,0") {
